<resources>
    <string name="app_name">Project1</string>
    <string name="action_settings">Settings</string>
    <string name="zero">0</string>
    <string name="one">1</string>
    <string name="two">2</string>
    <string name="three">3</string>
    <string name="four">4</string>
    <string name="five">5</string>
    <string name="six">6</string>
    <string name="seven">7</string>
    <string name="eight">8</string>
    <string name="nine">9</string>
    <string name="decimalPt">.</string>
    <string name="changeSign">\u00B1</string>
    <string name="addition">+</string>
    <string name="subtraction">-</string>
    <string name="multiplication">\u00D7</string>
    <string name="division">\u00F7</string>
    <string name="squareRoot">\u221A</string>
    <string name="percent">%</string>
    <string name="equals">=</string>
    <string name="clear">C</string>
</resources>
